# cv_room

WpfApp1/: WpfApp1.sln
WpfApp1/WpfApp1/: MainWindow.xaml  MainWindow.xaml.cs  WpfApp1.csproj  packages.config
power_modbus/: main.py  requirements.txt
power_modbus_rust/: Cargo.toml
power_modbus_rust/src/: communication.rs  main.rs  mysql_connection.rs
